--- a/Manual_Exchange_Rate_ASESORAIT/static/description/index.html
+++ b/Manual_Exchange_Rate_ASESORAIT/static/description/index.html
@@ -56,7 +56,7 @@
               Contact us at<br/>
     <i class="fa fa-2x fa fa-envelope"/>
     <a href="">
-      <b>asesora-it@gmail.com</b>
+      <b>earizmendiserrania@gmail.com</b>
     </a>
     
       </p>
