--- a/sale_order_automation_ASESORAIT/static/description/index.html
+++ b/sale_order_automation_ASESORAIT/static/description/index.html
@@ -50,10 +50,9 @@
                         <h2 class="text-center"><a>Contact us</a></h2>
                     </div>
                         <span>
-                            
-                            <a style="color: #d06d11 !important;" href="https://asesora-it-int-use.odoo.com" target="_blank">https://asesora-it-int-use.odoo.com</a> | 
                             <i class="fa fa-2x fa fa-envelope"/>
-                            <a style="color: #d06d11 !important;" href="info@asesora-it.com">info@asesora-it.com</a>
+                            <a style="color: #d06d11 !important;" href="info@asesora-it.com">info@asesora-it.com</a>|
+                            <a style="color: #d06d11 !important;" href=" https://asesora-it-int-use.odoo.com" target="_blank"> https://asesora-it-int-use.odoo.com</a>  
                         </span>
                     </div>
                 </div>
